KRSupdated_09122021/force-app/main/default/objects/MyOrder__c/MyOrder__c.object-meta.xml
<CustomObject>
    <label>MyOrder</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MyOrder</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>