KRSupdated_09122021/force-app/main/default/objects/MyOrder__c/fields/Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Address</label>
    <referenceTo>Contact_Address__c</referenceTo>
    <relationshipLabel>MyOrder</relationshipLabel>
    <relationshipName>MyOrder</relationshipName>
    <type>Lookup</type>
</CustomField>