KRSupdated_09122021/force-app/main/default/objects/MyOrder__c/fields/Expected_Deilvery_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Deilvery_Date__c</fullName>
    <formula>StartDate__c + 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Deilvery Date</label>
    <type>Date</type>
</CustomField>