KRSupdated_09122021/force-app/main/default/objects/MyOrder__c/fields/GrandTotal__c.field-meta.xml
<CustomField>
    <fullName>GrandTotal__c</fullName>
    <formula>Total_Price__c -  Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GrandTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>