KRSupdated_09122021/force-app/main/default/objects/MyOrder__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <label>Total Price</label>
    <summarizedField>OrderItems__c.TotalPrice__c</summarizedField>
    <summaryForeignKey>OrderItems__c.MyOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>